[gd_scene load_steps=3 format=3 uid="uid://bcbndkyamdyof"]

[ext_resource type="Script" uid="uid://bg0qpj515ms4f" path="res://addons/vsk_editor/sign_in/vsk_editor_sign_in_dialog.gd" id="1_8qsu1"]
[ext_resource type="PackedScene" uid="uid://dndlpuyrlfmxu" path="res://addons/vsk_editor/sign_in/vsk_editor_sign_in_dialog_control.tscn" id="2_8qsu1"]

[node name="SignIn" type="AcceptDialog" node_paths=PackedStringArray("vsk_editor_sign_in_dialog_control")]
oversampling_override = 1.0
title = "Sign in"
size = Vector2i(300, 600)
visible = true
exclusive = false
minimize_disabled = false
maximize_disabled = false
script = ExtResource("1_8qsu1")
vsk_editor_sign_in_dialog_control = NodePath("VSKEditorSignInDialogControl")

[node name="VSKEditorSignInDialogControl" parent="." instance=ExtResource("2_8qsu1")]
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -18.0

[connection signal="session_request_successful" from="VSKEditorSignInDialogControl" to="." method="_on_session_request_successful"]
